--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<section class="container" *ngIf="id">
+<section class="container" *ngIf="id && generatedId === id">
     <mat-card class="card">
        <mat-card-header>
             <mat-card-title>Reset your password</mat-card-title>
