--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -4,7 +4,7 @@
         <mat-icon *ngIf="!navigationService.isSidenavOpened">menu</mat-icon>
     </button>
     <span class="font-weight-normal">Menu</span>
-    <div class="nav-btn py-32">
+    <div class="nav-btn px-32">
       <button id="purchases" mat-button (click)="selectSection('purchases')">Purchases</button>
       <button id="production" mat-button (click)="selectSection('production')">Production</button>
       <button id="sales" mat-button (click)="selectSection('sales')">Sales</button>
