--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
@@ -7,7 +7,7 @@
 }
 
 .form-container {
-    padding: 32px;
+    padding: 24px 32px 8px 32px;
     display: flex;
     gap: 48px;
     align-items: center;
@@ -51,3 +51,14 @@
 .mat-mdc-table-sticky {
     border-top: 1px solid #e0e0e0;
 }
+
+.no-rows {
+    padding: 16px 0;
+    text-align: center;
+}
+
+.mat-mdc-header-row {
+    background: whitesmoke;
+}
+
+
