--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@ app-print-fibre-po {
 
 // size 
 
+.w-10 {
+    width: 10%;
+}
+
 .w-20 {
     width: 20%;
 }
@@ -30,12 +34,20 @@ app-print-fibre-po {
     width: 25%;
 }
 
+.w-35 {
+    width: 35%;
+}
+
 .w-40 {
     width: 40%
 }
 
 .w-50 {
     width: 50%
+}
+
+.w-100 {
+    width: 100%;
 }
 
 // Spacing
@@ -58,7 +70,11 @@ app-print-fibre-po {
     padding-top: 24px;
 }
 
-.py-32 {
+.py-12 {
+    padding: 12px 0;
+}
+
+.px-32 {
     padding: 0 32px;
 }
 
@@ -82,6 +98,18 @@ app-print-fibre-po {
 
 .ml-24 {
     margin-left: 24px;
+}
+
+.mt-16 {
+    margin-top: 16px;
+}
+
+.mb-8 {
+    margin-bottom: 8px;
+}
+
+.mb-16 {
+    margin-bottom: 16px;
 }
 
 .mb-24 {
