--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -48,12 +48,12 @@
     }
 }
 
-.submit-order-btn {
-    margin-top: 40px;
+.footer {
+    margin-top: 50px;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-between;
 }
+
 
 .mat-mdc-table-sticky {
     border-top: 1px solid #e0e0e0;
