--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -1,147 +1,241 @@
 <section class="container">
-    <h1 class="header letter-spacing-1">Fibre Purchases Dashboard</h1>
-    <mat-card class="party-card">
-      <mat-card-header>
-        <mat-card-title>Search PO</mat-card-title>
-      </mat-card-header>
-        <mat-card-content>
-            <form class="form-container" [formGroup]="form">
-                <mat-form-field appearance="fill" class="w-35">
-                  <mat-label>Party</mat-label>
-                  <mat-select formControlName="partyId">
-                    <ng-container *ngFor="let party of partyService.parties">
-                      <mat-option [value]="party.partyId">{{ party.partyName }}</mat-option>
-                    </ng-container>
-                  </mat-select>
-                </mat-form-field>
-
-                <mat-form-field appearance="fill">
-                    <mat-label>PO Status</mat-label>
-                    <mat-select formControlName="poType">
-                      <mat-option value="pending">Pending</mat-option>
-                      <mat-option value="received">Received</mat-option>
-                    </mat-select>
-                </mat-form-field>
-
-                <mat-form-field appearance="fill">
-                    <mat-label>PO date range</mat-label>
-                    <mat-date-range-input [rangePicker]="picker">
-                      <input matStartDate formControlName="poStartDate" placeholder="Start date">
-                      <input matEndDate formControlName="poEndDate" placeholder="End date">
-                    </mat-date-range-input>
-                    <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-date-range-picker #picker></mat-date-range-picker>
-                </mat-form-field>
-                <div class="form-btn">
-                    <button mat-raised-button (click)="onReset()"><mat-icon>refresh</mat-icon>Reset</button>
-                    <button mat-raised-button color="primary" (click)="onSearch()"><mat-icon>search</mat-icon>Search</button>
-                </div>
-            </form>
-        </mat-card-content>
-      </mat-card>
-
-      <div class="button-container">
-        <button mat-raised-button class="mb-16" (click)="addPO()">
-          <mat-icon>add_circle_outline</mat-icon>Add PO
-        </button>
-      </div>
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="w-100">
-            <ng-container matColumnDef="expand">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element"><mat-icon>{{ element == expandedElement  ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}</mat-icon> </td>
+  <h1 class="header letter-spacing-1">Fibre Purchases</h1>
+  <mat-card class="party-card">
+    <mat-card-header>
+      <mat-card-title>Search PO</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="form-container" [formGroup]="form">
+        <mat-form-field appearance="fill" class="w-35">
+          <mat-label>Party</mat-label>
+          <mat-select formControlName="partyId">
+            <ng-container *ngFor="let party of partyService.parties">
+              <mat-option [value]="party.partyId">{{
+                party.partyName
+              }}</mat-option>
             </ng-container>
+          </mat-select>
+        </mat-form-field>
 
-            <ng-container matColumnDef="poNo">
-                <th mat-header-cell *matHeaderCellDef>PONo</th>
-                <td mat-cell *matCellDef="let element"> {{ element.poNo }} </td>
-            </ng-container>
+        <mat-form-field appearance="fill">
+          <mat-label>PO Status</mat-label>
+          <mat-select formControlName="poType">
+            <mat-option value="pending">Pending</mat-option>
+            <mat-option value="received">Received</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-            <ng-container matColumnDef="party">
-                <th mat-header-cell *matHeaderCellDef>Party</th>
-                <td mat-cell *matCellDef="let element"> {{ element.party }} </td>
-            </ng-container>
+        <mat-form-field appearance="fill">
+          <mat-label>PO date range</mat-label>
+          <mat-date-range-input [rangePicker]="picker">
+            <input
+              matStartDate
+              formControlName="poStartDate"
+              placeholder="Start date"
+            />
+            <input
+              matEndDate
+              formControlName="poEndDate"
+              placeholder="End date"
+            />
+          </mat-date-range-input>
+          <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+        <div class="form-btn">
+          <button mat-raised-button (click)="onReset()">
+            <mat-icon>refresh</mat-icon>Reset
+          </button>
+          <button mat-raised-button color="primary" (click)="onSearch()">
+            <mat-icon>search</mat-icon>Search
+          </button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
 
-            <ng-container matColumnDef="poStatus">
-                <th mat-header-cell *matHeaderCellDef>POStatus</th>
-                <td mat-cell *matCellDef="let element"> {{ element.poStatus }} </td>
-            </ng-container>
+  <div class="button-container">
+    <button mat-raised-button class="mb-16" (click)="addPO()">
+      <mat-icon>add_circle_outline</mat-icon>Add PO
+    </button>
+  </div>
 
-            <ng-container matColumnDef="poDate">
-                <th mat-header-cell *matHeaderCellDef> PODate </th>
-                <td mat-cell *matCellDef="let element"> {{ element.poDate }} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-                    <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                        <button *ngIf="element.poStatus === 'Pending'" mat-raised-button class="mt-16 mb-16" (click)="addOrUpdateInvoice()">
-                            <mat-icon>edit</mat-icon>Add or Update Invoice
-                        </button>
-                        <div class="w-100 element-detail">
-                            <table mat-table [dataSource]="element.invoices" multiTemplateDataRows class="inner-table">
-                                <ng-container matColumnDef="invoice">
-                                    <th mat-header-cell *matHeaderCellDef> Invoice No </th>
-                                    <td mat-cell *matCellDef="let invoice"> {{ invoice.invoice }} </td>
-                                    <td mat-footer-cell *matFooterCellDef> </td>
-                                </ng-container>
-
-                                <ng-container matColumnDef="fibre">
-                                    <th mat-header-cell *matHeaderCellDef> Fibre </th>
-                                    <td mat-cell *matCellDef="let invoice"> {{ invoice.fibre }} </td>
-                                    <td mat-footer-cell *matFooterCellDef> </td>
-                                </ng-container>
-
-                                <ng-container matColumnDef="shade">
-                                    <th mat-header-cell *matHeaderCellDef> Shade </th>
-                                    <td mat-cell *matCellDef="let invoice"> {{ invoice.shade }} </td>
-                                    <td mat-footer-cell *matFooterCellDef> </td>
-                                </ng-container>
-
-                                <ng-container matColumnDef="kgs">
-                                    <th mat-header-cell *matHeaderCellDef class="text-right"> Kgs </th>
-                                    <td mat-cell *matCellDef="let invoice" class="text-right"> {{ invoice.kgs }} </td>
-                                    <td mat-footer-cell *matFooterCellDef class="text-right"> {{ getTotal(element.invoices, 'kgs') }} </td>
-                                </ng-container>
-
-                                <ng-container matColumnDef="amount">
-                                    <th mat-header-cell *matHeaderCellDef class="text-right"> Amount </th>
-                                    <td mat-cell *matCellDef="let invoice" class="text-right"> {{ invoice.amount | currency: 'INR' }} </td>
-                                    <td mat-footer-cell *matFooterCellDef class="text-right"> {{ getTotal(element.invoices, 'amount') | currency: 'INR' }} </td>
-                                </ng-container> 
-                                <tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
-                                <tr mat-row *matRowDef="let address; columns: innerDisplayedColumns;"></tr>
-                                <tr class="mat-row" *matNoDataRow>
-                                    <td class="mat-cell no-rows" [attr.colspan]="innerDisplayedColumns.length">
-                                    No rows to display
-                                    </td>
-                                </tr>
-                                <tr [hidden]="!element.invoices?.length" mat-footer-row *matFooterRowDef="innerDisplayedColumns; sticky: true"></tr>
-                            </table>
-                        </div>
-                    </div>
-                </td>
-            </ng-container>
-            
-            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-            <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-                id="{{ element.poNo }}"
-                class="row"
-                [class.expanded-row]="expandedElement === element"
-                (click)="expandedElement = expandedElement === element ? null : element; scrollInto(element.poNo)">
-            </tr>
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell no-rows" [attr.colspan]="columnsToDisplay.length">
-                No rows to display
-                </td>
-            </tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                    showFirstLastButtons
-                    class="border-top py-12"
-                    aria-label="Select page of POs">
-        </mat-paginator>
+  <div class="mat-elevation-z8 table-container">
+    <div *ngIf="loader" class="loader">
+      <mat-spinner></mat-spinner>
     </div>
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      multiTemplateDataRows
+      class="w-100"
+    >
+      <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon>{{
+            element === expandedElement
+              ? "keyboard_arrow_up"
+              : "keyboard_arrow_down"
+          }}</mat-icon>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="poNo">
+        <th mat-header-cell *matHeaderCellDef>PONo</th>
+        <td mat-cell *matCellDef="let element">{{ element.poNo }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="party">
+        <th mat-header-cell *matHeaderCellDef>Party</th>
+        <td mat-cell *matCellDef="let element">{{ element.party }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="poStatus">
+        <th mat-header-cell *matHeaderCellDef>POStatus</th>
+        <td mat-cell *matCellDef="let element">{{ element.poStatus }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="poDate">
+        <th mat-header-cell *matHeaderCellDef>PODate</th>
+        <td mat-cell *matCellDef="let element">{{ element.poDate }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [attr.colspan]="columnsToDisplay.length"
+        >
+          <div
+            [@detailExpand]="
+              element === expandedElement ? 'expanded' : 'collapsed'
+            "
+          >
+            <div class="pt-16 mb-16" *ngIf="element.poStatus === 'Pending'">
+              <button mat-raised-button (click)="addOrUpdateInvoice()">
+                <mat-icon>edit</mat-icon>Add or Update Invoice
+              </button>
+              <button mat-raised-button class="ml-16" (click)="updatePO()">
+                <mat-icon>edit</mat-icon>Update PO
+              </button>
+            </div>
+            <div class="w-100 element-detail">
+              <table
+                mat-table
+                [dataSource]="element.invoices"
+                multiTemplateDataRows
+                class="inner-table"
+              >
+                <ng-container matColumnDef="invoice">
+                  <th mat-header-cell *matHeaderCellDef>Invoice No</th>
+                  <td mat-cell *matCellDef="let invoice">
+                    {{ invoice.invoice }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="fibre">
+                  <th mat-header-cell *matHeaderCellDef>Fibre</th>
+                  <td mat-cell *matCellDef="let invoice">
+                    {{ invoice.fibre }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="shade">
+                  <th mat-header-cell *matHeaderCellDef>Shade</th>
+                  <td mat-cell *matCellDef="let invoice">
+                    {{ invoice.shade }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+
+                <ng-container matColumnDef="kgs">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Kgs
+                  </th>
+                  <td mat-cell *matCellDef="let invoice" class="text-right">
+                    {{ invoice.kgs }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef class="text-right">
+                    {{ getTotal(element.invoices, "kgs") }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="amount">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Amount
+                  </th>
+                  <td mat-cell *matCellDef="let invoice" class="text-right">
+                    {{ invoice.amount | currency : "INR" }}
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef class="text-right">
+                    {{
+                      getTotal(element.invoices, "amount") | currency : "INR"
+                    }}
+                  </td>
+                </ng-container>
+                <tr
+                  mat-header-row
+                  *matHeaderRowDef="innerDisplayedColumns"
+                ></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let address; columns: innerDisplayedColumns"
+                ></tr>
+                <tr class="mat-row" *matNoDataRow>
+                  <td
+                    class="mat-cell no-rows"
+                    [attr.colspan]="innerDisplayedColumns.length"
+                  >
+                    No rows to display
+                  </td>
+                </tr>
+                <tr
+                  [hidden]="!element.invoices?.length"
+                  mat-footer-row
+                  *matFooterRowDef="innerDisplayedColumns; sticky: true"
+                ></tr>
+              </table>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr
+        mat-row
+        *matRowDef="let element; columns: columnsToDisplay"
+        id="{{ element.poNo }}"
+        class="row"
+        [class.expanded-row]="expandedElement === element"
+        (click)="
+          expandedElement = expandedElement === element ? null : element;
+          scrollInto(element.poNo)
+        "
+      ></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell no-rows" [attr.colspan]="columnsToDisplay.length">
+          No rows to display
+        </td>
+      </tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: ['expandedDetail']"
+        class="detail-row"
+      ></tr>
+    </table>
+    <mat-paginator
+      [pageSizeOptions]="[10, 20, 50, 100]"
+      showFirstLastButtons
+      class="border-top py-12"
+      aria-label="Select page of POs"
+    >
+    </mat-paginator>
+  </div>
 </section>
