--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.scss
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.scss
@@ -80,3 +80,21 @@ tr.row:not(.expanded-row) {
 mat-paginator, .mat-mdc-header-row {
   background: whitesmoke;
 }
+
+.table-container {
+  position: relative;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
