Added email verify API call

--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,55 +1,90 @@
 <section class="container" *ngIf="id && generatedId === id">
-    <mat-card class="card">
-       <mat-card-header>
-            <mat-card-title>Reset your password</mat-card-title>
-       </mat-card-header>
-        <mat-card-content>
-            <form class="form" [formGroup]="form">
-                <mat-form-field>
-                    <mat-label>Enter New password</mat-label>
-                    <input matInput type="password" formControlName="password">
-                    <mat-hint>Password should have minimum length - 8</mat-hint>
-                    <mat-error *ngIf="password?.hasError('required')">This is a required field.</mat-error>
-                    <mat-error *ngIf="password?.hasError('minlength')">Please enter valid password.</mat-error>
-                </mat-form-field>
-                <mat-form-field>
-                    <mat-label>Confirm new password</mat-label>
-                    <input matInput type="text" formControlName="confirmPassword" required>
-                    <mat-hint>Should be same as new password</mat-hint>
-                    <mat-error *ngIf="confirmPassword?.hasError('required')">This is a required field.</mat-error>
-                </mat-form-field>
-                
-                <mat-error class="password-error" *ngIf="!confirmPassword?.hasError('required') && form.hasError('passwordNotMatch')">
-                    <mat-icon aria-label="error icon">error</mat-icon>
-                    <span>Confirm new password should be same as new password!</span>
-                </mat-error>
-            </form>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-raised-button color="primary" (click)="onReset()">Reset</button>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Reset your password</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="form" [formGroup]="form">
+        <mat-form-field>
+          <mat-label>Enter New password</mat-label>
+          <input matInput type="password" formControlName="password" />
+          <mat-hint>Password should have minimum length - 8</mat-hint>
+          <mat-error *ngIf="password?.hasError('required')"
+            >This is a required field.</mat-error
+          >
+          <mat-error *ngIf="password?.hasError('minlength')"
+            >Please enter valid password.</mat-error
+          >
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Confirm new password</mat-label>
+          <input
+            matInput
+            type="text"
+            formControlName="confirmPassword"
+            required
+          />
+          <mat-hint>Should be same as new password</mat-hint>
+          <mat-error *ngIf="confirmPassword?.hasError('required')"
+            >This is a required field.</mat-error
+          >
+        </mat-form-field>
+
+        <mat-error
+          class="password-error"
+          *ngIf="
+            !confirmPassword?.hasError('required') &&
+            form.hasError('passwordNotMatch')
+          "
+        >
+          <mat-icon aria-label="error icon">error</mat-icon>
+          <span>Confirm new password should be same as new password!</span>
+        </mat-error>
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" (click)="onReset()">
+        Reset
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </section>
 
 <section class="container" *ngIf="!id">
-    <mat-card class="card">
-        <mat-card-header>
-             <mat-card-title>Forgot password</mat-card-title>
-        </mat-card-header>
-         <mat-card-content>
-            <p class="pt-24">Enter you email address associated with your account and we'll send you link to reset your password.</p>
-             <form class="form" [formGroup]="form">
-                 <mat-form-field>
-                     <mat-label>Email</mat-label>
-                     <input matInput type="email" formControlName="email">
-                     <mat-error *ngIf="email?.hasError('required')">This is a required field.</mat-error>
-                     <mat-error *ngIf="email?.hasError('pattern')">Please enter valid email.</mat-error>
-                 </mat-form-field>
-             </form>
-         </mat-card-content>
-         <mat-card-actions>
-             <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
-             <button mat-button color="primary" (click)="backToLogin()"><mat-icon>arrow_back</mat-icon> Back to login</button>
-         </mat-card-actions>
-     </mat-card>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>Forgot password</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p class="pt-24">
+        Enter you email address associated with your account and we'll send you
+        link to reset your password.
+      </p>
+      <form class="form no-gap" [formGroup]="form">
+        <mat-form-field>
+          <mat-label>Email</mat-label>
+          <input matInput type="email" formControlName="email" />
+          <mat-error *ngIf="email?.hasError('required')"
+            >This is a required field.</mat-error
+          >
+          <mat-error *ngIf="email?.hasError('pattern')"
+            >Please enter valid email.</mat-error
+          >
+        </mat-form-field>
+
+        <mat-error class="email-error" *ngIf="emailService.isInvalid">
+          <mat-icon aria-label="error icon">error</mat-icon>
+          <span>Email is undeliverable to the entered address!</span>
+        </mat-error>
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" (click)="onSubmit()">
+        Submit
+      </button>
+      <button mat-button color="primary" (click)="backToLogin()">
+        <mat-icon>arrow_back</mat-icon> Back to login
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </section>
