--- a/src/app/components/reset-password/reset-password.component.scss
+++ b/src/app/components/reset-password/reset-password.component.scss
@@ -1,32 +1,37 @@
 .container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
-    width: 50%;
-    padding: 32px;
+  width: 50%;
+  padding: 32px;
 }
 
 .form {
-    padding: 32px 0 16px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  padding: 32px 0 16px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.no-gap {
+  gap: 0;
 }
 
 mat-card-actions {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 24px;
 }
 
-.password-error {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+.password-error,
+.email-error {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
