--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,29 +1,46 @@
 <section class="container">
   <div class="login">
     <div class="left">
-    <div class="header">
+      <div class="header">
         <h1>Log in</h1>
         <p>Enter your credentials to access your account</p>
-    </div>
-     <form class="form" [formGroup]="form">
-         <mat-form-field>
-             <mat-icon matPrefix>perm_identity</mat-icon>
-             <mat-label>Username</mat-label>
-             <input matInput type="text" formControlName="username">
-             <mat-error *ngIf="username?.hasError('required')">This is a required field.</mat-error>
-         </mat-form-field>
-         <mat-form-field>
-             <mat-icon matPrefix>lock</mat-icon>
-             <mat-label>Password</mat-label>
-             <input matInput [type]="showPassword ? 'text' : 'password'" formControlName="password" required>
-             <mat-icon matSuffix (click)="togglePasswordVisibility()">
-                 {{ showPassword ? 'visibility_off' : 'visibility' }}
-             </mat-icon>
-             <mat-error *ngIf="password?.hasError('required')">This is a required field.</mat-error>
-         </mat-form-field>
-         <button mat-raised-button color="primary" (click)="submit()">Login</button>
-         <button mat-button color="primary" (click)="forgotPassword()"><span class="font-size-14">Forgot password?</span></button>
-     </form>
+      </div>
+      <form class="form" [formGroup]="form">
+        <mat-form-field>
+          <mat-icon matPrefix>perm_identity</mat-icon>
+          <mat-label>Username</mat-label>
+          <input matInput type="text" formControlName="username" />
+          <mat-error *ngIf="username?.hasError('required')"
+            >This is a required field.</mat-error
+          >
+        </mat-form-field>
+        <mat-form-field>
+          <mat-icon matPrefix>lock</mat-icon>
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            [type]="showPassword ? 'text' : 'password'"
+            formControlName="password"
+            required
+          />
+          <mat-icon matSuffix (click)="togglePasswordVisibility()">
+            {{ showPassword ? "visibility_off" : "visibility" }}
+          </mat-icon>
+          <mat-error *ngIf="password?.hasError('required')"
+            >This is a required field.</mat-error
+          >
+        </mat-form-field>
+        <mat-error class="credentials-error" *ngIf="credentialsError">
+          <mat-icon aria-label="error icon">error</mat-icon>
+          <span>The username or password you entered is incorrect.</span>
+        </mat-error>
+        <button mat-raised-button color="primary" (click)="submit()">
+          Login
+        </button>
+        <button mat-button color="primary" (click)="forgotPassword()">
+          <span class="font-size-14">Forgot password?</span>
+        </button>
+      </form>
     </div>
     <div class="right"></div>
   </div>
