--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,66 +1,71 @@
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(63, 81, 181, 0.4);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(63, 81, 181, 0.4);
 }
 
 .login {
-    width: 80%;
-    height: 90%;
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14),
-    0px 9px 46px 8px rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
-    overflow: hidden;
+  width: 80%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),
+    0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .right {
-    width: 60%;
-    height: 100%;
-    background: linear-gradient(to right, rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.2)),
-    url('../../../assets/images/login.jpg');
-    background-size: cover;
+  width: 60%;
+  height: 100%;
+  background: linear-gradient(to right, rgb(0, 0, 0, 0.2), rgb(0, 0, 0, 0.2)),
+    url("../../../assets/images/login.jpg");
+  background-size: cover;
 }
 
 .left {
-    width: 40%;
-    height: 100%;
-    padding: 0 32px;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 40%;
+  height: 100%;
+  padding: 0 32px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 h1 {
-    font-size: 28px;
-    font-weight: 500;
-    margin-bottom: 32px;
-    color: rgba(38, 35, 35, 0.9);
+  font-size: 28px;
+  font-weight: 500;
+  margin-bottom: 32px;
+  color: rgba(38, 35, 35, 0.9);
 }
 
 p {
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
 }
 
 button {
-    font-size: 18px;
-    padding: 24px;
+  font-size: 18px;
+  padding: 24px;
 }
 
+.credentials-error {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
