--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,53 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #fafafa; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #fafafa;
+}
 
 // print
 
 app-print-fibre-po {
-    display: none;
+  display: none;
 }
 
 @media print {
-    app-print-fibre-po {
-      display: block;
-    }
+  app-print-fibre-po {
+    display: block;
+  }
 
-    #app-container, .cdk-overlay-container {
-      display: none;
-    }
+  #app-container,
+  .cdk-overlay-container {
+    display: none;
+  }
 }
 
-
-// size 
+// size
 
 .w-10 {
-    width: 10%;
+  width: 10%;
 }
 
 .w-20 {
-    width: 20%;
+  width: 20%;
 }
 
 .w-25 {
-    width: 25%;
+  width: 25%;
 }
 
 .w-35 {
-    width: 35%;
+  width: 35%;
 }
 
 .w-40 {
-    width: 40%
+  width: 40%;
 }
 
 .w-50 {
-    width: 50%
+  width: 50%;
 }
 
 .w-100 {
-    width: 100%;
+  width: 100%;
 }
 
 // Spacing
@@ -55,119 +62,115 @@ app-print-fibre-po {
 // letter spacing
 
 .letter-spacing-1 {
-    letter-spacing: 0.5px !important;
+  letter-spacing: 0.5px !important;
 }
-
 
 .letter-spacing-2 {
-    letter-spacing: 2px !important;
+  letter-spacing: 2px !important;
 }
-
 
 //padding
 
 .pt-24 {
-    padding-top: 24px;
+  padding-top: 24px;
 }
 
 .py-12 {
-    padding: 12px 0;
+  padding: 12px 0;
 }
 
 .px-32 {
-    padding: 0 32px;
+  padding: 0 32px;
 }
 
 .pt-16 {
-    padding-top: 16px;
+  padding-top: 16px;
 }
 
 .pr-4 {
-    padding-right: 4px;
+  padding-right: 4px;
 }
 
 // margin
 
 .ml-8 {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 
 .ml-16 {
-    margin-left: 16px;
+  margin-left: 16px;
 }
 
 .ml-24 {
-    margin-left: 24px;
+  margin-left: 24px;
 }
 
 .mt-16 {
-    margin-top: 16px;
+  margin-top: 16px;
 }
 
 .mb-8 {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .mb-16 {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .mb-24 {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .mr-8 {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .mr-16 {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 
 // font weight
 
 .font-weight-bold {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .font-weight-normal {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 // Font size
 
 .font-size-16 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .font-size-14 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .font-size-20 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .font-size-24 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .font-size-28 {
-    font-size: 28px;
+  font-size: 28px;
 }
-
 
 // text align
 
 .text-right {
-    text-align: right !important;
+  text-align: right !important;
 }
 
 .text-center {
-    text-align: center !important;
+  text-align: center !important;
 }
 
 .text-left {
-    text-align: left !important;
+  text-align: left !important;
 }
-
