--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -97,7 +97,14 @@
 
       <ng-container matColumnDef="poStatus">
         <th mat-header-cell *matHeaderCellDef>POStatus</th>
-        <td mat-cell *matCellDef="let element">{{ element.poStatus }}</td>
+        <td mat-cell *matCellDef="let element">
+          <div
+            class="status-chip"
+            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'received'"
+          >
+            {{ element.poStatus }}
+          </div>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="poDate">
