--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -21,7 +21,7 @@
           <mat-label>PO Status</mat-label>
           <mat-select formControlName="poType">
             <mat-option value="pending">Pending</mat-option>
-            <mat-option value="received">Received</mat-option>
+            <mat-option value="delivered">Delivered</mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -100,7 +100,7 @@
         <td mat-cell *matCellDef="let element">
           <div
             class="status-chip"
-            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'received'"
+            [ngClass]="element.poStatus === 'Pending' ? 'pending' : 'delivered'"
           >
             {{ element.poStatus }}
           </div>
@@ -138,10 +138,10 @@
                 multiTemplateDataRows
                 class="inner-table"
               >
-                <ng-container matColumnDef="invoice">
-                  <th mat-header-cell *matHeaderCellDef>Invoice No</th>
+                <ng-container matColumnDef="receivedDc">
+                  <th mat-header-cell *matHeaderCellDef>Received DC</th>
                   <td mat-cell *matCellDef="let invoice">
-                    {{ invoice.invoice }}
+                    {{ invoice.receivedDc }}
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
