--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -2,7 +2,8 @@
   background: rgba(0, 0, 0, 0.2);
 }
 
-.dashboard-btn {
+.dashboard-btn,
+.navigation-btn {
   display: flex;
   gap: 8px;
   align-items: center;
@@ -23,4 +24,8 @@ mat-nav-list {
 
 .pl-12 {
   padding-left: 12px;
+}
+
+.pl-20 {
+  padding-left: 20px;
 }
