--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,6 +97,10 @@ app-print-fibre-po {
 
 // margin
 
+.my-16 {
+  margin: 16px 0;
+}
+
 .ml-8 {
   margin-left: 8px;
 }
@@ -144,6 +148,10 @@ app-print-fibre-po {
 }
 
 // Font size
+
+.font-size-18 {
+  font-size: 18px;
+}
 
 .font-size-16 {
   font-size: 16px;
