updated poStatus form control name

--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -19,7 +19,7 @@
 
         <mat-form-field appearance="fill">
           <mat-label>PO Status</mat-label>
-          <mat-select formControlName="poType">
+          <mat-select formControlName="poStatus">
             <mat-option value="pending">Pending</mat-option>
             <mat-option value="delivered">Delivered</mat-option>
           </mat-select>
