removed receive fibre menu option

--- a/src/app/components/dash/dash.component.html
+++ b/src/app/components/dash/dash.component.html
@@ -7,9 +7,12 @@
           <mat-card-title class> Purchases </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content border-top">
-          <div class="title">Fibre</div>
-          <div class="my-16">
-            Total orders: <span class="font-weight-bold font-size-20">100</span>
+          <div>
+            <div class="title">Fibre</div>
+            <div class="my-16">
+              Total orders:
+              <span class="font-weight-bold font-size-20">100</span>
+            </div>
           </div>
           <canvas
             baseChart
