--- a/src/app/components/dash/dash.component.scss
+++ b/src/app/components/dash/dash.component.scss
@@ -18,8 +18,9 @@
 .dashboard-card-content {
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
+  height: 100%;
+  gap: 40px;
 }
 
 .title {
